fix: Fix IDE Gadget display - MEED-8607 - Meeds-io/MIPs#180
This PR will fix the IDE Gadget display regression.